<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.osamamac.taskmanager.Activities.AddNewTaskActivity"
    tools:showIn="@layout/activity_add_new_task">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/addNewTaskRelLayoutProject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true">

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/addNewTaskProjectImageView"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerVertical="true"
                android:layout_margin="8dp"
                android:src="@drawable/calendar" />

            <TextView
                android:id="@+id/addNewTaskProjectTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:layout_toRightOf="@id/addNewTaskProjectImageView"
                android:text="@string/add_new_task_project"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/addNewTaskProject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/addNewTaskProjectTextView"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="4dp"
                android:layout_toRightOf="@id/addNewTaskProjectImageView"
                android:text="@string/add_new_task_project_default"
                android:textColor="#212121"
                android:textSize="18sp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/addNewTaskRelLayoutDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true">

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/addNewTaskDateImageView"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerVertical="true"
                android:layout_margin="8dp"
                android:src="@drawable/calendar" />

            <TextView
                android:id="@+id/addNewTaskDueDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:layout_toRightOf="@id/addNewTaskDateImageView"
                android:text="@string/add_new_task_due_date"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/addNewTaskDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/addNewTaskDueDate"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="4dp"
                android:layout_toRightOf="@id/addNewTaskDateImageView"
                android:text="@string/add_new_task_due_date_default"
                android:textColor="#212121"
                android:textSize="18sp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/addNewTaskRelLayoutPriority"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true">

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/addNewTaskPriorityImageView"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerVertical="true"
                android:layout_margin="8dp"
                android:src="@drawable/calendar" />

            <TextView
                android:id="@+id/addNewTaskPriorityTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:layout_toRightOf="@id/addNewTaskPriorityImageView"
                android:text="@string/add_new_task_priority"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/addNewTaskPriority"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/addNewTaskPriorityTextView"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="4dp"
                android:layout_toRightOf="@id/addNewTaskPriorityImageView"
                android:text="@string/add_new_task_priority_default"
                android:textColor="#212121"
                android:textSize="18sp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/addNewTaskRelLayoutLabels"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true">

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/addNewTaskLabelsImageView"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerVertical="true"
                android:layout_margin="8dp"
                android:src="@drawable/calendar" />

            <TextView
                android:id="@+id/addNewTaskLabelsTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:layout_toRightOf="@id/addNewTaskLabelsImageView"
                android:text="@string/add_new_task_labels"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/addNewTaskLabels"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/addNewTaskLabelsTextView"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="4dp"
                android:layout_toRightOf="@id/addNewTaskLabelsImageView"
                android:text="@string/add_new_task_labels_default"
                android:textColor="#212121"
                android:textSize="18sp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/addNewTaskRelLayoutComments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true">

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/addNewTaskCommentsImageView"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerVertical="true"
                android:layout_margin="8dp"
                android:src="@drawable/calendar" />

            <TextView
                android:id="@+id/addNewTaskCommentsTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:layout_toRightOf="@id/addNewTaskCommentsImageView"
                android:text="@string/add_new_task_comments"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/addNewTaskComments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/addNewTaskCommentsTextView"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="4dp"
                android:layout_toRightOf="@id/addNewTaskCommentsImageView"
                android:text="@string/add_new_task_comments_default"
                android:textColor="#212121"
                android:textSize="18sp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/addNewTaskRelLayoutReminders"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true">

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/addNewTaskRemindersImageView"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerVertical="true"
                android:layout_margin="8dp"
                android:src="@drawable/calendar" />

            <TextView
                android:id="@+id/addNewTaskRemindersTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:layout_toRightOf="@id/addNewTaskRemindersImageView"
                android:text="@string/add_new_task_reminders"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/addNewTaskReminders"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/addNewTaskRemindersTextView"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="4dp"
                android:layout_toRightOf="@id/addNewTaskRemindersImageView"
                android:text="@string/add_new_task_reminders_default"
                android:textColor="#212121"
                android:textSize="18sp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/addNewTaskRelLayoutLocations"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true">

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/addNewTaskLocationssImageView"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerVertical="true"
                android:layout_margin="8dp"
                android:src="@drawable/calendar" />

            <TextView
                android:id="@+id/addNewTaskLocationsTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:layout_toRightOf="@id/addNewTaskLocationssImageView"
                android:text="@string/add_new_task_locations"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/addNewTaskLocations"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/addNewTaskLocationsTextView"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="4dp"
                android:layout_toRightOf="@id/addNewTaskLocationssImageView"
                android:text="@string/add_new_task_locations_default"
                android:textColor="#212121"
                android:textSize="18sp" />
        </RelativeLayout>
    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
